--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -4,7 +4,7 @@
 // ––––––––––––––––––––
 
 // Prefix for CSS variables
-$css-var-prefix: "CIKO" !default;
+$css-var-prefix: "00" !default;
 
 // Define the root element used to target <header>, <main>, <footer>
 // with $enable-semantic-container and $enable-responsive-spacings
