--- a/scss/forms/_checkbox-radio-switch.scss
+++ b/scss/forms/_checkbox-radio-switch.scss
@@ -125,7 +125,9 @@
       background-image: none;
 
       &::before {
-        margin-inline-start: calc(#{$switch-width * 0.5} - var(#{$✨}border-width));
+        margin-inline-start: calc(
+          #{$switch-width * 0.5} - var(#{$✨}border-width)
+        );
       }
     }
 
