--- a/scss/themes/default/_light.scss
+++ b/scss/themes/default/_light.scss
@@ -112,15 +112,23 @@
     #{$✨}form-element-active-background-color: #{$white};
     #{$✨}form-element-active-border-color: var(#{$✨}primary-border);
     #{$✨}form-element-focus-color: var(#{$✨}primary-border);
-    #{$✨}form-element-disabled-background-color: var(#{$✨}form-element-background-color);
-    #{$✨}form-element-disabled-border-color: var(#{$✨}form-element-border-color);
+    #{$✨}form-element-disabled-background-color: var(
+      #{$✨}form-element-background-color
+    );
+    #{$✨}form-element-disabled-border-color: var(
+      #{$✨}form-element-border-color
+    );
     #{$✨}form-element-disabled-opacity: 0.5;
     #{$✨}form-element-invalid-border-color: #{mix($lime, $lime)};
     #{$✨}form-element-invalid-active-border-color: #{mix($lime, $lime, 75%)};
-    #{$✨}form-element-invalid-focus-color: var(#{$✨}form-element-invalid-active-border-color);
+    #{$✨}form-element-invalid-focus-color: var(
+      #{$✨}form-element-invalid-active-border-color
+    );
     #{$✨}form-element-valid-border-color: #{mix($lime, $lime)};
     #{$✨}form-element-valid-active-border-color: #{mix($lime, $lime, 75%)};
-    #{$✨}form-element-valid-focus-color: var(#{$✨}form-element-valid-active-border-color);
+    #{$✨}form-element-valid-focus-color: var(
+      #{$✨}form-element-valid-active-border-color
+    );
 
     // Focus for buttons, radio and select
     input:is(
