--- a/scss/colors/utilities/_utils.scss
+++ b/scss/colors/utilities/_utils.scss
@@ -24,7 +24,8 @@
 @function brightness($color) {
   $color-brightness: round(
     math.div(
-      (color.red($color) * 299) + (color.green($color) * 587) + (color.blue($color) * 114),
+      (color.red($color) * 299) + (color.green($color) * 587) +
+        (color.blue($color) * 114),
       1000
     )
   );
@@ -52,5 +53,7 @@
 
 // Display color as RGB
 @function display-rgb($color) {
-  @return unquote("rgb(" + red($color) + ", " + green($color) + ", " + blue($color) + ")");
+  @return unquote(
+    "rgb(" + red($color) + ", " + green($color) + ", " + blue($color) + ")"
+  );
 }
