--- a/scss/content/_typography.scss
+++ b/scss/content/_typography.scss
@@ -86,7 +86,19 @@
   // }
 
   // Margin-top for headings after a block
-  :where(article, address, blockquote, dl, figure, form, ol, p, pre, table, ul) {
+  :where(
+      article,
+      address,
+      blockquote,
+      dl,
+      figure,
+      form,
+      ol,
+      p,
+      pre,
+      table,
+      ul
+    ) {
     ~ :is(h1, h2, h3, h4, h5, h6) {
       margin-top: var(#{$✨}typography-spacing-top);
     }
