--- a/scss/utils/_copyright.scss
+++ b/scss/utils/_copyright.scss
@@ -1,5 +1,5 @@
 /*!
- * CIKO 🍕 v0.0.3 (https://ciko.rokma.rocks)
+ * FIKO 🐸 v0.0.3 (https://fiko.rokma.rocks)
  * MONOCOLOR, black and white
  * Copyright 2023 - Licensed under MIT
  */
