--- a/scss/utils/_functions.scss
+++ b/scss/utils/_functions.scss
@@ -1,4 +1,6 @@
 // Display color as RGB
 @function display-rgb($color) {
-  @return unquote("rgb(" + red($color) + ", " + green($color) + ", " + blue($color) + ")");
+  @return unquote(
+    "rgb(" + red($color) + ", " + green($color) + ", " + blue($color) + ")"
+  );
 }
