--- a/scss/fiko.fluid.classless.scss
+++ b/scss/fiko.fluid.classless.scss
@@ -1,5 +1,6 @@
-// Pico classless version
+// FIKO classless version
 @use "index" with (
   $enable-semantic-container: true,
+  $enable-viewport: false,
   $enable-classes: false
 );
