--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -1,7 +1,7 @@
 @use "sass:map";
 @use "../settings" as *;
 
-@if map.get($modules, "content/button") {
+@if map.get($modules, "components/button") {
   /**
    * Button
    */
