--- a/scss/components/_code.scss
+++ b/scss/components/_code.scss
@@ -1,7 +1,7 @@
 @use "sass:map";
 @use "../settings" as *;
 
-@if map.get($modules, "content/code") {
+@if map.get($modules, "components/code") {
   /**
    * Code
    */
