--- a/scss/components/_table.scss
+++ b/scss/components/_table.scss
@@ -1,7 +1,7 @@
 @use "sass:map";
 @use "../settings" as *;
 
-@if map.get($modules, "content/table") {
+@if map.get($modules, "components/table") {
   /**
    * Table
    */
