--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -1,7 +1,7 @@
 @use "sass:map";
 @use "../settings" as *;
 
-@if map.get($modules, "content/typography") {
+@if map.get($modules, "components/typography") {
   /**
    * Typography
    */
