--- a/scss/fiko.classless.scss
+++ b/scss/fiko.classless.scss
@@ -1,6 +1,5 @@
-// Pico classless version
+// FIKO classless version
 @use "index" with (
   $enable-semantic-container: true,
-  $enable-viewport: false,
   $enable-classes: false
 );
