--- a/scss/utils/_copyright.scss
+++ b/scss/utils/_copyright.scss
@@ -1,5 +1,5 @@
 /*!
- * FIKO 🐸 v0.0.3 (https://fiko.rokma.rocks)
- * MONOCOLOR, black and white
+ * FIKO 🐸 v0.0.4 (https://fiko.rokma.rocks)
+ * MONOCOLOR | Black&White
  * Copyright 2023 - Licensed under MIT
  */
