--- a/scss/utils/_reduce-motion.scss
+++ b/scss/utils/_reduce-motion.scss
@@ -1,7 +1,7 @@
 @use "sass:map";
 @use "../settings" as *;
 
-@if map.get($modules, "utilities/reduce-motion") and
+@if map.get($modules, "utils/reduce-motion") and
   enable-transitions and
   enable-important
 {
