--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -35,11 +35,11 @@
 // Components
 @use "components/accordion"; // details, summary
 @use "components/card"; // article
+@use "components/group"; // role="group"
+@use "components/nav"; // nav
 //@use "components/dropdown"; // details.dropdown
-//@use "components/group"; // role="group"
 //@use "components/loading"; // aria-busy=true
 //@use "components/modal"; // dialog
-@use "components/nav"; // nav
 //@use "components/progress"; // progress
 //@use "components/tooltip"; // data-tooltip
 
