--- a/scss/utils/_copyright.scss
+++ b/scss/utils/_copyright.scss
@@ -1,5 +1,6 @@
 /*!
  * FIKO 🐸 v0.0.4 (https://fiko.rokma.rocks)
- * MONOCOLOR | Black&White
- * Copyright 2023 - Licensed under MIT
+ * Customisable Black & White default
+ * Inspired by Pico | MIT License | https://github.com/picocss/pico
+ * Copyright 2023 Rokma - Licensed under MIT
  */
