--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -13,7 +13,7 @@ $semantic-root-element: "body" !default;
 // Enable <header>, <main>, <footer> inside $semantic-root-element as containers
 $enable-semantic-container: false !default;
 
-// Enable a centered viewport for <header>, <main>, <footer> inside $semantic-root-element
+// Enable a centred viewport for <header>, <main>, <footer> inside $semantic-root-element
 // Fluid layout if disabled
 $enable-viewport: true !default;
 
@@ -104,12 +104,11 @@ $modules: map.merge(
     // Content
     "components/link": true,
     "components/typography": true,
-    //"components/embedded": true,
     "components/button": true,
     "components/table": true,
-    //"components/code": true,
     "components/mix": true,
-
+    //"components/code": true,
+    //"components/embedded": true,
     // Forms
     // "forms/basics": true,
     // "forms/checkbox-radio-switch": true,
@@ -121,11 +120,11 @@ $modules: map.merge(
     // Components
     "components/accordion": true,
     "components/card": true,
+    "components/nav": true,
     //"components/dropdown": true,
     // "components/group": true,
     // "components/loading": true,
     // "components/modal": true,
-    "components/nav": true,
     // "components/progress": true,
     // "components/tooltip": true,
     // Utilities
