--- a/scss/themes/default/_styles.scss
+++ b/scss/themes/default/_styles.scss
@@ -17,8 +17,8 @@
     #{$✨}font-family-monospace: ui-monospace, SFMono-Regular, "SF Mono", Menlo,
       Consolas, "Liberation Mono", monospace, var(#{$✨}font-family-emoji);
     #{$✨}font-family: var(#{$✨}font-family-sans-serif);
-    #{$✨}line-height: 1.5;
-    #{$✨}font-weight: 400;
+    #{$✨}line-height: 1.35;
+    #{$✨}font-weight: 500;
     #{$✨}font-size: 100%;
     #{$✨}text-underline-offset: 0.1rem;
 
@@ -39,15 +39,15 @@
     #{$✨}outline-width: 0.1875rem;
 
     // Transitions
-    #{$✨}transition: 0.2s ease-in-out;
+    #{$✨}transition: 0.3s ease-in-out;
 
     // Spacings
     #{$✨}spacing: 1rem;
 
     // Spacings for typography elements
-    @if map.get($modules, "components/typography") {
-      #{$✨}typography-spacing-vertical: 1rem;
-    }
+    // @if map.get($modules, "components/typography") {
+    //   #{$✨}spacing-vertical: 1rem;
+    // }
 
     // Spacings for body > header, body > main, body > footer, section, article
     @if map.get($modules, "layout/landmarks") or
@@ -55,7 +55,7 @@
       map.get($modules, "components/card") or
       map.get($modules, "components/modal")
     {
-      #{$✨}block-spacing-vertical: calc(var(#{$✨}spacing) * 2);
+      #{$✨}spacing-vertical: calc(var(#{$✨}spacing) * 2);
       #{$✨}block-spacing-horizontal: var(#{$✨}spacing);
     }
 
@@ -97,14 +97,14 @@
       #{$✨}modal-overlay-backdrop-filter: blur(0.375rem);
     }
 
-    // Spacings for nav component
-    @if map.get($modules, "components/nav") {
-      #{$✨}nav-element-spacing-vertical: 1rem;
-      #{$✨}nav-element-spacing-horizontal: 0.5rem;
-      #{$✨}nav-link-spacing-vertical: 0.5rem;
-      #{$✨}nav-link-spacing-horizontal: 0.5rem;
-      #{$✨}nav-breadcrumb-divider: ">";
-    }
+    // // Spacings for nav component
+    // @if map.get($modules, "components/nav") {
+    //   #{$✨}nav-element-spacing-vertical: 1rem;
+    //   #{$✨}nav-element-spacing-horizontal: 0.5rem;
+    //   #{$✨}nav-link-spacing-vertical: 0.5rem;
+    //   #{$✨}nav-link-spacing-horizontal: 0.5rem;
+    //   #{$✨}nav-breadcrumb-divider: ">";
+    // }
 
     // Checkboxes icons
     @if map.get($modules, "forms/checkbox-radio-switch") {
@@ -117,7 +117,7 @@
       map.get($modules, "components/accordion") or
       map.get($modules, "components/dropdown")
     {
-      #{$✨}icon-chevron: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='#{functions.display-rgb($lime)}' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
+      #{$✨}icon-chevron: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='#{functions.display-rgb($white)}' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
     }
 
     // Chevron icons
@@ -142,24 +142,24 @@
 
     // Datetime icons
     @if map.get($modules, "forms/input-date") {
-      #{$✨}icon-date: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='#{functions.display-rgb($lime)}' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Crect x='3' y='4' width='18' height='18' rx='2' ry='2'%3E%3C/rect%3E%3Cline x1='16' y1='2' x2='16' y2='6'%3E%3C/line%3E%3Cline x1='8' y1='2' x2='8' y2='6'%3E%3C/line%3E%3Cline x1='3' y1='10' x2='21' y2='10'%3E%3C/line%3E%3C/svg%3E");
-      #{$✨}icon-time: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='#{functions.display-rgb($lime)}' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Ccircle cx='12' cy='12' r='10'%3E%3C/circle%3E%3Cpolyline points='12 6 12 12 16 14'%3E%3C/polyline%3E%3C/svg%3E");
+      #{$✨}icon-date: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='#{functions.display-rgb($white)}' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Crect x='3' y='4' width='18' height='18' rx='2' ry='2'%3E%3C/rect%3E%3Cline x1='16' y1='2' x2='16' y2='6'%3E%3C/line%3E%3Cline x1='8' y1='2' x2='8' y2='6'%3E%3C/line%3E%3Cline x1='3' y1='10' x2='21' y2='10'%3E%3C/line%3E%3C/svg%3E");
+      #{$✨}icon-time: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='#{functions.display-rgb($white)}' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Ccircle cx='12' cy='12' r='10'%3E%3C/circle%3E%3Cpolyline points='12 6 12 12 16 14'%3E%3C/polyline%3E%3C/svg%3E");
     }
 
     // Search icon
     @if map.get($modules, "forms/input-search") {
-      #{$✨}icon-search: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='#{functions.display-rgb($lime)}' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'%3E%3Ccircle cx='11' cy='11' r='8'%3E%3C/circle%3E%3Cline x1='21' y1='21' x2='16.65' y2='16.65'%3E%3C/line%3E%3C/svg%3E");
+      #{$✨}icon-search: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='#{functions.display-rgb($white)}' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'%3E%3Ccircle cx='11' cy='11' r='8'%3E%3C/circle%3E%3Cline x1='21' y1='21' x2='16.65' y2='16.65'%3E%3C/line%3E%3C/svg%3E");
     }
 
     // Close icon
     @if map.get($modules, "components/modal") {
-      #{$✨}icon-close: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='#{functions.display-rgb($lime)}' stroke-width='3' stroke-linecap='round' stroke-linejoin='round'%3E%3Cline x1='18' y1='6' x2='6' y2='18'%3E%3C/line%3E%3Cline x1='6' y1='6' x2='18' y2='18'%3E%3C/line%3E%3C/svg%3E");
+      #{$✨}icon-close: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='#{functions.display-rgb($white)}' stroke-width='3' stroke-linecap='round' stroke-linejoin='round'%3E%3Cline x1='18' y1='6' x2='6' y2='18'%3E%3C/line%3E%3Cline x1='6' y1='6' x2='18' y2='18'%3E%3C/line%3E%3C/svg%3E");
     }
 
     // Loading icon (animated)
     @if map.get($modules, "components/loading") {
       // Inspired by https://codepen.io/aleksander351/pen/KzgKPo
-      #{$✨}icon-loading: url("data:image/svg+xml,%3Csvg fill='none' height='24' width='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg' %3E%3Cstyle%3E g %7B animation: rotate 2s linear infinite; transform-origin: center center; %7D circle %7B stroke-dasharray: 75,100; stroke-dashoffset: -5; animation: dash 1.5s ease-in-out infinite; stroke-linecap: round; %7D @keyframes rotate %7B 0%25 %7B transform: rotate(0deg); %7D 100%25 %7B transform: rotate(360deg); %7D %7D @keyframes dash %7B 0%25 %7B stroke-dasharray: 1,100; stroke-dashoffset: 0; %7D 50%25 %7B stroke-dasharray: 44.5,100; stroke-dashoffset: -17.5; %7D 100%25 %7B stroke-dasharray: 44.5,100; stroke-dashoffset: -62; %7D %7D %3C/style%3E%3Cg%3E%3Ccircle cx='12' cy='12' r='10' fill='none' stroke='#{functions.display-rgb($lime)}' stroke-width='4' /%3E%3C/g%3E%3C/svg%3E");
+      #{$✨}icon-loading: url("data:image/svg+xml,%3Csvg fill='none' height='24' width='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg' %3E%3Cstyle%3E g %7B animation: rotate 2s linear infinite; transform-origin: center center; %7D circle %7B stroke-dasharray: 75,100; stroke-dashoffset: -5; animation: dash 1.5s ease-in-out infinite; stroke-linecap: round; %7D @keyframes rotate %7B 0%25 %7B transform: rotate(0deg); %7D 100%25 %7B transform: rotate(360deg); %7D %7D @keyframes dash %7B 0%25 %7B stroke-dasharray: 1,100; stroke-dashoffset: 0; %7D 50%25 %7B stroke-dasharray: 44.5,100; stroke-dashoffset: -17.5; %7D 100%25 %7B stroke-dasharray: 44.5,100; stroke-dashoffset: -62; %7D %7D %3C/style%3E%3Cg%3E%3Ccircle cx='12' cy='12' r='10' fill='none' stroke='#{functions.display-rgb($white)}' stroke-width='4' /%3E%3C/g%3E%3C/svg%3E");
 
       // Change the icon color to white for buttons
       [aria-busy="true"]:not(input, select, textarea) {
@@ -202,9 +202,7 @@
                 $multiplier: 4.5;
               }
 
-              #{$✨}block-spacing-vertical: calc(
-                var(#{$✨}spacing) * $multiplier
-              );
+              #{$✨}spacing-vertical: calc(var(#{$✨}spacing) * $multiplier);
             }
           }
         }
@@ -242,19 +240,19 @@
     // Modal
     @if map.get($modules, "components/modal") {
       dialog > article {
-        #{$✨}block-spacing-vertical: calc(var(#{$✨}spacing) * 2);
+        #{$✨}spacing-vertical: calc(var(#{$✨}spacing) * 2);
         #{$✨}block-spacing-horizontal: var(#{$✨}spacing);
 
         @if map.get($breakpoints, "sm") {
           @media (min-width: map.get(map.get($breakpoints, "sm"), "breakpoint")) {
-            #{$✨}block-spacing-vertical: calc(var(#{$✨}spacing) * 2.5);
+            #{$✨}spacing-vertical: calc(var(#{$✨}spacing) * 2.5);
             #{$✨}block-spacing-horizontal: calc(var(#{$✨}spacing) * 1.25);
           }
         }
 
         @if map.get($breakpoints, "md") {
           @media (min-width: map.get(map.get($breakpoints, "md"), "breakpoint")) {
-            #{$✨}block-spacing-vertical: calc(var(#{$✨}spacing) * 3);
+            #{$✨}spacing-vertical: calc(var(#{$✨}spacing) * 3);
             #{$✨}block-spacing-horizontal: calc(var(#{$✨}spacing) * 1.5);
           }
         }
@@ -291,41 +289,41 @@
     h4,
     h5,
     h6 {
-      #{$✨}font-weight: 700;
+      #{$✨}font-weight: 300;
     }
 
     h1 {
-      #{$✨}font-size: 2rem;
+      #{$✨}font-size: 2.25rem;
       #{$✨}line-height: 1.25;
       #{$✨}typography-spacing-top: 3rem;
     }
 
     h2 {
-      #{$✨}font-size: 1.75rem;
+      #{$✨}font-size: 2rem;
       #{$✨}line-height: 1.3;
       #{$✨}typography-spacing-top: 2.625rem;
     }
 
     h3 {
-      #{$✨}font-size: 1.5rem;
+      #{$✨}font-size: 1.75rem;
       #{$✨}line-height: 1.35;
       #{$✨}typography-spacing-top: 2.25rem;
     }
 
     h4 {
-      #{$✨}font-size: 1.25rem;
+      #{$✨}font-size: 1.5rem;
       #{$✨}line-height: 1.4;
       #{$✨}typography-spacing-top: 1.874rem;
     }
 
     h5 {
-      #{$✨}font-size: 1.125rem;
+      #{$✨}font-size: 1.25rem;
       #{$✨}line-height: 1.45;
       #{$✨}typography-spacing-top: 1.6875rem;
     }
 
     h6 {
-      #{$✨}font-size: 1rem;
+      #{$✨}font-size: 1.125rem;
       #{$✨}typography-spacing-top: 1.5rem;
     }
   }
