--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -11,17 +11,17 @@
 @use "layout/landmarks"; // body, header, main, footer
 @use "layout/container"; // .container, .container-fluid
 @use "layout/section"; // section
-//@use "layout/grid"; // .grid
-//@use "layout/scroller"; // figure
+@use "layout/grid"; // .grid
+@use "layout/scroller"; // figure
 
 // Content
 @use "components/link"; // a, role="link"
 @use "components/typography"; // headings, p, ul, blockquote, ...
-//@use "components/embedded"; // audio, canvas, iframe, img, svg, video
+@use "components/embedded"; // audio, canvas, iframe, img, svg, video
 @use "components/button"; // button, role="button", type="button", type="submit" ...
 @use "components/table"; // table, tr, td, ...
-//@use "components/code"; // pre, code, ...
-//@use "components/mix"; // hr, template, [hidden], dialog, canvas
+@use "components/code"; // pre, code, ...
+@use "components/mix"; // hr, template, [hidden], dialog, canvas
 
 // Forms
 //@use "forms/basics"; // input, select, textarea, label, fieldset, legend
